# oxiproxy

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  install.sh
.github/workflows/: docker.yml  release.yml
client/: Cargo.toml
client/src/: main.rs
client/src/client/: connection_manager.rs  connector.rs  grpc_client.rs  log_collector.rs  mod.rs
common/: Cargo.toml
common/proto/: oxiproxy.proto
common/src/: lib.rs  log_viewer.rs  process_status.rs  systemd.rs  utils.rs
common/src/grpc/: pending_requests.rs
common/src/protocol/: client_config.rs  control.rs
common/src/tunnel/: kcp.rs  quic.rs  tcp.rs  traits.rs
controller/: Cargo.toml  build.rs
controller/src/: cert_generator.rs  certificate_manager.rs  client_stream_manager.rs  entity.rs  geo_ip.rs  grpc_agent_client_service.rs  grpc_agent_server_service.rs  grpc_server.rs  main.rs  node_manager.rs  traffic.rs  traffic_limiter.rs
controller/src/api/: mod.rs
controller/src/api/handlers/: auth.rs  client.rs  client_config.rs  client_logs.rs  dashboard.rs  mod.rs  node.rs  proxy.rs  system_config.rs  user.rs  version.rs
controller/src/config/: mod.rs
controller/src/entity/: client.rs  node.rs  node_certificate.rs
controller/src/migration/: m20260313_000001_add_default_quota_config.rs  m20260315_000001_add_node_certificates.rs  m20260317_000001_add_client_last_online_at.rs  m20260317_000002_add_node_last_online_at.rs  mod.rs
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/lib/: api.ts  services.ts  types.ts  utils.ts
dashboard/src/pages/: Clients.tsx  Nodes.tsx  Proxies.tsx  Settings.tsx  Users.tsx
deploy/cron.d/: oxiproxy-log-archive
deploy/logrotate/: oxiproxy
deploy/scripts/: oxiproxy-log-archive.sh
docker/: docker-compose.client.yml  docker-compose.node.yml  docker-compose.yml
docs/: AUTO_CERT_IMPLEMENTATION.md  QUIC_CERT_FIX_MIGRATION.md  QUIC_CERT_VERIFICATION.md  certificate-rotation.md
docs/superpowers/plans/: 2026-06-14-status-command.md  2026-06-17-log-subcommand.md
docs/superpowers/specs/: 2026-06-14-status-command-design.md  2026-06-17-log-subcommand-design.md
node/: Cargo.toml
node/src/: main.rs
node/src/server/: grpc_client.rs  local_proxy_control.rs  mod.rs  node_logs.rs  proxy_server.rs  tunnel_manager.rs
scripts/: calculate_cert_fingerprint.ps1  calculate_cert_fingerprint.sh
