[workspace]
members = ["node", "client", "common", "controller"]
resolver = "3"

# 发布构建优化：参考 rathole 的激进调优
# LTO + 单 codegen unit 提升运行时性能 ~10-15%
# panic=abort 消除展开元数据，缩小二进制并简化异步任务
# strip 移除调试符号（进一步缩小 2-5MB）
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

# 最小尺寸构建（适用于嵌入式场景）
[profile.minimal]
inherits = "release"
opt-level = "z"

# 基准测试保留调试信息
[profile.bench]
debug = 1

[workspace.dependencies]
# Internal
common = { path = "common" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = { version = "0.1" }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.11"

# Error handling
anyhow = "1.0"

# gRPC / Protobuf
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# TLS / Crypto
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.2"
webpki-roots = "0.26"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# QUIC / KCP
quinn = { version = "0.11", features = ["rustls", "ring"] }
tokio_kcp = "0.9.8"
yamux = "0.13"

# Web
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-server-dual-protocol = { version = "0.7", default-features = false }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false }

# Database
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Auth
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2"] }

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4.43", features = ["serde"] }
time = "0.3"

# Misc
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9.2"
parking_lot = "0.12"
tempfile = "3"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
socket2 = { version = "0.6.2", features = ["all"] }
rcgen = "0.14.6"

# Platform-specific
daemonize = "0.5"
libc = "0.2"
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
windows-service = "0.7"
