[package]
name = "common"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio_kcp = { workspace = true }
tracing = { workspace = true }
yamux = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
socket2 = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock", "Win32_Foundation"] }

[build-dependencies]
tonic-build = { workspace = true }
