[package]
name = "controller"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
axum-server-dual-protocol = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tonic = { workspace = true, features = ["tls"] }
rustls = { workspace = true, features = ["ring"] }
base64 = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
rcgen = { workspace = true }
self_update = { workspace = true }
tempfile = { workspace = true }

# Daemon (Unix only)
[target.'cfg(unix)'.dependencies]
daemonize = { workspace = true }
libc = { workspace = true }

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
