[package]
name = "node"
version = "0.0.0-dev"
edition = "2021"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
# Shared
common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rustls = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# CLI
clap = { workspace = true }
self_update = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }

# Tunnel server
quinn = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }

# gRPC
tonic = { workspace = true, features = ["tls", "tls-webpki-roots"] }
prost = { workspace = true }

# Daemon (Unix only)
[target.'cfg(unix)'.dependencies]
daemonize = { workspace = true }
libc = { workspace = true }

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
